# QLib

./: .gitignore  CMakeLists.txt  QLib.sln  README.md  main.cc
QLib/: BoxMuller_generator.cpp  BoxMuller_generator.h  QLib.vcxproj  QLib.vcxproj.filters
mylib/: CMakeLists.txt
mylib/math/: INSTALL.vcxproj  INSTALL.vcxproj.filters  rng.cc  sayHi.cc  sayHi.h
mylib/methods/: montecarlo.cc  montecarlo.h
test/: CMakeLists.txt  sayHi.cc
tinyQlib/: CMakeLists.txt
tinyQlib/math/: cmake_install.cmake  slib.vcxproj  slib.vcxproj.filters
